Update JVM settings and enhance album navigation features